<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Kite</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_user_sign_up">New User? Sign Up</string>
    <string name="login_or_sign_up">Login or Sign Up</string>
    <string name="it_s_time_to_get_you_moving">It\'s time to get you moving.</string>
    <string name="login">Login</string>
    <string name="let_s_get_you_started">Let\'s get you started.</string>
    <string name="your_next_trip_awaits">Your next trip awaits</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgetText">Please enter your registered email address and we will send you the password reset instructions</string>
    <string name="email_address">EMAIL ADDRESS</string>
    <string name="submit">Submit</string>
    <string name="password">Password</string>
    <string name="forget_password"><u>Forget Password?</u></string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="password_CAPS">PASSWORD</string>
    <string name="sign_up" translatable="false">Sign Up</string>
    <string name="looks_like_it_s_your_first_time_here" translatable="false">Looks like it\'s your first time here.</string>
    <string name="first_name" translatable="false">First Name</string>
    <string name="last_name" translatable="false">Last Name</string>
    <string name="mobile_number" translatable="false">Mobile Number</string>
    <string name="country" translatable="false">Country</string>
    <string name="terms" translatable="false">I have read,and agree to the Terms and Conditions and Privacy Policy provided.</string>
    <string name="confirm_password" translatable="false">Confirm Password</string>
    <string name="select_your_program" translatable="false">Select Your Program</string>
    <string name="program_text">Let\'s get a better idea of where you are.</string>
    <string name="email_address_small" translatable="false">Email Address</string>
    <string name="confirm" translatable="false">Confirm</string>
    <string name="don_t_see_your_property_search_now" translatable="false">Don\'t see your property? Search Now</string>
    <string name="search" translatable="false">Search</string>
    <string name="otp" translatable="false">OTP</string>
    <string name="confirmation_code" translatable="false">Confirmation Code</string>
    <string name="confirmation_text" translatable="false">We\'ve sent you a 4 digit confirmation code to XXXXXXXXXX. Please enter it below to confirm your mobile number.</string>
    <string name="type_code" translatable="false">Type Code</string>
    <string name="send_agin_text" translatable="false">Haven\'t received the OTP? Send it again now</string>
    <string name="terms_and_conditions" translatable="false">Terms and Conditions</string>
    <string name="privacy_policy" translatable="false">Privacy Policy</string>
    <string name="terms_and_service" translatable="false">Terms and Service</string>
    <string name="map_coming_soon" translatable="false">Map Coming Soon</string>
    <string name="help" translatable="false">Help</string>
    <string name="start_your_next_trip" translatable="false">Start your next trip</string>
    <string name="tap" translatable="false">Tap on a pickup point to navigate and book your next ride.</string>
    <string name="ok" translatable="false" tools:ignore="ButtonCase">Ok</string>
    <string name="wallet" translatable="false">Wallet</string>
    <string name="ride_history" translatable="false">Ride History</string>
    <string name="support" translatable="false">Support</string>
    <string name="property_selection" translatable="false">Property Selection</string>
    <string name="setting" translatable="false">Settings</string>
    <string name="no_past_completed_booking_found" translatable="false">No past completed booking found</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="select_payment">Select Payment</string>
    <string name="your_card">Your Card</string>
    <string name="save">SAVE</string>
    <string name="add_card">Add Card</string>
    <string name="no_cards_available">No Cards Available</string>
    <string name="add_new_card">Add New Card</string>
    <string-array name="country_list">
        <item>United States</item>
        <item>Canada</item>
    </string-array>
    <string name="enter_email">Please enter email</string>
    <string name="enter_password">Please enter password</string>
    <string name="valid_email">Please enter valid email</string>
    <string name="valid_password">Password minimum length should be 6</string>
    <string name="english">English</string>
    <string name="updates">Updates</string>
    <string name="prakash">Prakash</string>
    <string name="trip_taken_0">Trip taken : 0</string>
    <string name="reservations">Reservations</string>
    <string name="notification">Notification</string>
    <string name="let_s_add_a_card_to_get_you_moving">Let\'s add a card to get you moving</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="card_number">Card Number</string>
    <string name="card_hint">**** **** **** 1234</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="cvv">CVV</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="what_is_a_cvv">What is a CVV?</string>
    <string name="cvv_explain">it\'s a 3 or 4 digit card Verification Code found on the back of your credit card</string>
    <string name="got_it">Got it</string>
    <string name="get_started">Get Started</string>
    <string name="subscription_text">Subscriptions will automatically renew and your cedit card will be charged at the end of each period.</string>
    <string name="become_a">BECOME A</string>
    <string name="kite_runner">Kite Runner</string>
    <string name="rate">$4.99/m</string>
    <string name="schedule_weeks_in_advance">Schedule weeks in advance</string>
    <string name="up_to_3_edits_each_trip">Up to 3 edits each trip</string>
    <string name="reduced_cancellation_fees">Reduced cancellation fees</string>
    <string name="change_contact">Change Contact</string>
    <string name="verification_caps">VERIFICATION EXPIRY</string>
    <string name="dash">-</string>
    <string name="country_of_doc">Country of doc.</string>
    <string name="otp_verify_text">Please enter phone number and we will send you the OTP to verify.</string>
    <string name="update_mobile_number">Update mobile number</string>
    <string name="not_verified">Not Verified</string>
    <string name="update">Update</string>
    <string name="address">Address</string>
    <string name="state_province">State/Province</string>
    <string name="city">City</string>
    <string name="zip_postal_code">Zip/Postal Code</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="make_this_card_priority">Make this Card Priority</string>
    <string name="next">Next</string>
    <string name="reservation">Reservation</string>
    <string name="your_booking">Your Booking</string>
    <string name="reservation_text">Looks like you don\'t have any reservations booked</string>
    <string name="schedule_trip">Schedule Trip</string>
    <string name="select_your_vehicle_type">Select your vehicle type</string>
    <string name="rate_vehicle">$1/min</string>
    <string name="available">Available</string>
    <string name="ride_now">Ride Now</string>
    <string name="driver_licence">Driver Licence &amp; Waiver</string>
    <string name="select_driver_s_licence_country">Select driver\'s licence country</string>
    <string name="country_selector">Please choose the country that issued your driver\'s licence.</string>
    <string name="canada">Canada</string>
    <string name="united_states">United states</string>
    <string name="continue_text">Continue</string>
    <string name="info_string">Your information is stored securely and stays private.</string>
    <string name="agreement_text">I have read, and agree to the Rental Agreement &amp; Waiver.</string>
    <string name="need_help">Need Help</string>
    <string name="help_detect_camera">Make sure you follow these tips to help the camera detect and scan your license.</string>
    <string name="check_your_lighting">Check your lighting</string>
    <string name="help_lighting">Make sure your lighting is not too bright or too dark. Try moving into a well-lit area.</string>
    <string name="hold_steady">Hold steady</string>
    <string name="help_hold">Take your time and hold your device steady to get a clear photo.</string>
    <string name="get_every_frame">Get everything in frame</string>
    <string name="help_frame">Place your license on a flat surface for best results.</string>
    <string name="use_a_background">Use a dark background</string>
    <string name="help_background">Hign contrast will help the camera to detect the edges of your license.</string>
    <string name="retry">Retry</string>
    <string name="rental_agreement">Rental Agreement</string>
    <string name="scan_license_id_front">Scan License ID Front</string>
    <string name="select_license_back">Select License ID Back</string>
    <string name="select_license_id_front">Select License ID Front</string>
    <string name="take_user_selfie">Take a Selfie</string>
    <string name="driver_license_entry">Driver License Entry</string>
    <string name="license_success">Your License and Selfie have been successfully captured.</string>
    <string name="enter_your_info_exactly_as_it_appears_on_your_license_so_we_can_verify_your_eligibility_to_drive">Enter your info exactly as it appears on your license so we can verify your eligibility to drive.</string>
    <string name="license_number">License Number</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="mm_dd_yyy">MM/DD/YYY</string>
    <string name="save_continue"><![CDATA[Save & Continue]]></string>
    <string name="qr_location">QR Location</string>
    <string name="qr_location_text">On the driver\'s side of the vehicle, located on hte window, you\'ll find the vehicles QR code. Scan this code to get started.</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="let_s_get_you_ready">Let\'s get you ready</string>
    <string name="dialog_qr_text">Located an available eCar in a designated kite space and scan QR code on the window to get started</string>
    <string name="i_m_ready">I\'m Ready</string>
    <string name="no_notifications_available">No notifications available</string>
    <string name="select_country">Select Country</string>
    <string name="select_state">Select State</string>
    <string name="what_type_of_user_are_you">What type of user are you?</string>
    <string name="resident">Resident</string>
    <string name="guest">Guest</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="i_am_over_23">I am over 23?</string>
    <string name="signature">Signature</string>
    <string name="upload_photo_id">Upload Photo ID</string>
    <string name="what_is_this"><u>What is this?</u></string>
    <string name="i_have_read_and_accept_the_terms_and_conditions_provided">I have read and accept the Terms and Conditions provided.</string>
    <string name="photo_id_text">To Ensure the safety of you and our riders , we require a valid Photo ID of primary profile, or the user guardian in order to get you moving.</string>
    <string name="cancel">Cancel</string>
</resources>